--- a/EveryYeoga/WebContent/resources/css/bootstrap_modify.css
+++ b/EveryYeoga/WebContent/resources/css/bootstrap_modify.css
@@ -1572,7 +1572,7 @@ pre code {
         width: 91.66666666666666%;
     }
     .col-lg-10 {
-        width: 83.33333333333334%;
+        width: 90%;
     }
     .col-lg-9 {
         width: 75%;
