--- a/EveryYeoga/WebContent/resources/css/bootstrap.css
+++ b/EveryYeoga/WebContent/resources/css/bootstrap.css
@@ -3893,7 +3893,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     max-height: 200px;
   }
 }
-.container > .navbar-header,
 .container-fluid > .navbar-header,
 .container > .navbar-collapse,
 .container-fluid > .navbar-collapse {
@@ -4340,13 +4339,13 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   }
 }
 .navbar-inverse .navbar-link {
-  color: #9d9d9d;
+  color: #8080ff;
 }
 .navbar-inverse .navbar-link:hover {
   color: #fff;
 }
 .navbar-inverse .btn-link {
-  color: #9d9d9d;
+  color: #8080ff;
 }
 .navbar-inverse .btn-link:hover,
 .navbar-inverse .btn-link:focus {
