--- a/EveryYeoga/WebContent/assets/css/style.css
+++ b/EveryYeoga/WebContent/assets/css/style.css
@@ -7,7 +7,7 @@
 
 a {
 	color: #07768d;
-}
+}table-responsive
 
 a:hover {
 	text-decoration: none;
@@ -81,7 +81,7 @@ ul {
 }
 
 #content {
-	width: 480px;
+	width: 50px;
 	float: right;
 	padding: 35px;
 	background: #fff;
@@ -97,17 +97,11 @@ ul {
 	color: #997F7A;
 }
 
-#header {
-	position: relative;
-	padding: 35px;
-	height: 130px;
-}
-
 #logo {
 	position: absolute;
-	top: 200px;
-	height: 130px;
-	line-height: 130px;
+	top: 100px;
+	height: 80px;
+	line-height: 80px;
 }
 
 #logo a {
@@ -150,32 +144,7 @@ ul {
 	border-top: 0;
 }
 
-#nav {
-	position: absolute;
-	right: 450px;
-	height: 57px;
-	line-height: 100px;
-	top: 550px;
-}
 
-#nav a {
-	text-decoration: none;
-	text-transform: lowercase;
-	color: #f1f0f0;
-	text-shadow: 0px 2px 1px #36221e;
-}
-
-#nav li {
-	margin: 0px 1em 0 1em;
-}
-
-#nav ul {
-	list-style: none;
-}
-
-#nav ul li {
-	float: left;
-}
 
 #outer {
 	position: relative;
@@ -197,9 +166,9 @@ ul {
 }
 
 #sidebar1 {
-	width: 850px;
+	width: 400px;
 	float: left;
-	padding: 30px;
+	padding: 10px;
 	background: #b09792 url('images/bg3.jpg');
 	color: #ede9e8;
 	border: solid 1px #C1B0AC;
@@ -230,7 +199,7 @@ ul {
 }
 
 #sidebar2 {
-	width: 700px;
+	width: 500px;
 	margin: 150px 50px 0 700px;
 	padding: 35px;
 	color: #f3efef;
