--- a/EveryYeoga/WebContent/css/style.css
+++ b/EveryYeoga/WebContent/css/style.css
@@ -1,12 +1,12 @@
-html, body {
+	html, body {
   border: 0;
   padding: 0;
   margin: 0;
-  height: 100%;
+  height: 80%;
 }
 
 body {
-  background: tomato;
+  background: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,7 +23,7 @@ form {
   border-radius: 10px;
 }
 form header {
-  background: #FF3838;
+  background: #f4a24f;
   padding: 30px 20px;
   color: white;
   font-size: 1.2em;
@@ -31,6 +31,7 @@ form header {
   border-radius: 10px 10px 0 0;
 }
 form label {
+	size: 50px;
   margin-left: 20px;
   display: inline-block;
   margin-top: 30px;
@@ -38,7 +39,7 @@ form label {
   position: relative;
 }
 form label span {
-  color: #FF3838;
+  color: #ff0000;
   font-size: 2em;
   position: absolute;
   left: 2.3em;
@@ -46,9 +47,9 @@ form label span {
 }
 form input {
   display: block;
-  width: 78%;
+  width: 20px;
   margin-left: 20px;
-  padding: 5px 20px;
+  padding: 5px 10px;
   font-size: 1em;
   border-radius: 3px;
   outline: none;
@@ -67,7 +68,7 @@ form button {
   transform: translate(-50%, 0);
   font-family: inherit;
   color: white;
-  background: #FF3838;
+  background: #ff8040;
   outline: none;
   border: none;
   padding: 5px 15px;
@@ -79,5 +80,5 @@ form button {
   transition: all 0.15s ease-in-out;
 }
 form button:hover {
-  background: #ff5252;
+  background: #ff8080;
 }
