--- a/EveryYeoga/WebContent/resources/css/bootstrap_modify.css
+++ b/EveryYeoga/WebContent/resources/css/bootstrap_modify.css
@@ -1,4 +1,4 @@
-/*! normalize.css v2.1.3 | MIT License | git.io/normalize */
+ /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 
 article,
 aside,
@@ -80,7 +80,7 @@ hr {
 
 mark {
     color: #000;
-    background: #ff0;
+    background: #408080;
 }
 
 code,
@@ -314,13 +314,13 @@ textarea {
 }
 
 a {
-    color: #377B33;
+    color: #010107;
     text-decoration: none;
 }
 
 a:hover,
 a:focus {
-    color: #B3D335;
+    color: #0080c0;
     text-decoration: underline;
 }
 
@@ -362,10 +362,10 @@ img {
 }
 
 hr {
-    margin-top: 21px;
+    margin-top: 11px;
     margin-bottom: 21px;
     border: 0;
-    border-top: 1px solid #ecf0f1;
+    border-top: 1px solid #c0c0c0;
 }
 
 .sr-only {
@@ -2066,7 +2066,7 @@ output {
 .form-control[readonly],
 fieldset[disabled] .form-control {
     cursor: not-allowed;
-    background-color: #ecf0f1;
+    background-color: #800080;
 }
 
 textarea.form-control {
@@ -2485,7 +2485,7 @@ fieldset[disabled] .btn-default.active {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    color: #ffffff;
+    color: #d1dedc;
     background-color: #1e2a36;
     border-color: #161f29;
 }
@@ -6254,7 +6254,9 @@ a.list-group-item.active:focus .list-group-item-text {
 }
 
 .well {
-    min-height: 20px;
+	margin-left:300px;
+	width: 90%;
+    min-height: 30px;
     padding: 19px;
     margin-bottom: 20px;
     background-color: #ecf0f1;
